# SuperMech

./: .gitignore  .gitmodules  LICENSE
doc/: Memory.csv  Memory.xml  PartsStats.numbers  Processor.csv  Processor.xml  Storage.csv  Storage.xml
game/: CMakeLists.txt
game/include/: Battle.h  BattleAbility.h  BattleActions.h  BattleEffect.h  BattleRenderer.h  Mech.h  MechGraphic.h  Parts.h  PartsLoader.h
game/include/Modules/: MapGameModule.h
game/src/: Battle.cpp  BattleAbility.cpp  BattleRenderer.cpp  Mech.cpp  MechGraphic.cpp  Parts.cpp  main.cpp
game/src/Modules/: MapGameModule.cpp
src/: main.cpp
tools/: CMakeLists.txt
tools/CSVStatsConverter/: CSVBlockParser.cpp  CSVBlockParser.h  MechPartExporter.cpp  MechPartExporter.h  main.cpp
